src/tests/integer_prefix_expression/snapshots/monkey_interpreter__tests__integer_prefix_expression__test_integer_prefix_expression_case_2_environment.snap
---
source: src/tests/integer_prefix_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {},
            enclosing: None,
        },
    },
}
