src/tests/integer_prefix_expression/snapshots/monkey_interpreter__tests__integer_prefix_expression__test_integer_prefix_expression_case_2_evaluator.snap
---
source: src/tests/integer_prefix_expression/mod.rs
expression: evaluation
---
Integer {
    value: -10,
}
