src/tests/integer_prefix_expression/snapshots/monkey_interpreter__tests__integer_prefix_expression__test_integer_prefix_expression_case_2_syntax_analysis.snap
---
source: src/tests/integer_prefix_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: MinusPrefix {
            right_hand: Integer {
                literal: 10,
            },
        },
    },
]
